Fix fdo#64579 Don't assume dsp:dataModelExt has valid DrawingML.

Just don't assume the DSP_TOKEN( spTree ) was seen in input.

Change-Id: Iaabdcafdfcfc995198c1265e975df4dde8e0a39c